Update Discovery of Handwashing.ipynb

--- a/Discovery of Handwashing.ipynb
+++ b/Discovery of Handwashing.ipynb
@@ -17,7 +17,7 @@
    },
    "source": [
     "## 1. Meet Dr. Ignaz Semmelweis\n",
-    "<p><img style=\"float: left;margin:5px 20px 5px 1px\" src=\"http://s3.amazonaws.com/assets.datacamp.com/production/project_49/datasets/ignaz_semmelweis_1860.jpeg\"></p>\n",
+    "<p><img style=\"float: left;margin:5px 20px 5px 1px\" src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Ignaz_Semmelweis_1860.jpg/225px-Ignaz_Semmelweis_1860.jpg"></p>\n",
     "<!--\n",
     "<img style=\"float: left;margin:5px 20px 5px 1px\" src=\"https://assets.datacamp.com/production/project_49/datasets/ignaz_semmelweis_1860.jpeg\">\n",
     "-->\n",
